docs/provider-grafana/0.12/enterprise/v1alpha1/report.md
---
permalink: /provider-grafana/0.12/enterprise/v1alpha1/report/
---

# enterprise.v1alpha1.report

"Report is the Schema for the Reports API. Note: This resource is available only with Grafana Enterprise 7.+. Official documentation https://grafana.com/docs/grafana/latest/dashboards/create-reports/HTTP API https://grafana.com/docs/grafana/latest/developers/http_api/reporting/"

## Index

* [`fn new(name)`](#fn-new)
* [`obj metadata`](#obj-metadata)
  * [`fn withAnnotations(annotations)`](#fn-metadatawithannotations)
  * [`fn withAnnotationsMixin(annotations)`](#fn-metadatawithannotationsmixin)
  * [`fn withClusterName(clusterName)`](#fn-metadatawithclustername)
  * [`fn withCreationTimestamp(creationTimestamp)`](#fn-metadatawithcreationtimestamp)
  * [`fn withDeletionGracePeriodSeconds(deletionGracePeriodSeconds)`](#fn-metadatawithdeletiongraceperiodseconds)
  * [`fn withDeletionTimestamp(deletionTimestamp)`](#fn-metadatawithdeletiontimestamp)
  * [`fn withFinalizers(finalizers)`](#fn-metadatawithfinalizers)
  * [`fn withFinalizersMixin(finalizers)`](#fn-metadatawithfinalizersmixin)
  * [`fn withGenerateName(generateName)`](#fn-metadatawithgeneratename)
  * [`fn withGeneration(generation)`](#fn-metadatawithgeneration)
  * [`fn withLabels(labels)`](#fn-metadatawithlabels)
  * [`fn withLabelsMixin(labels)`](#fn-metadatawithlabelsmixin)
  * [`fn withName(name)`](#fn-metadatawithname)
  * [`fn withNamespace(namespace)`](#fn-metadatawithnamespace)
  * [`fn withOwnerReferences(ownerReferences)`](#fn-metadatawithownerreferences)
  * [`fn withOwnerReferencesMixin(ownerReferences)`](#fn-metadatawithownerreferencesmixin)
  * [`fn withResourceVersion(resourceVersion)`](#fn-metadatawithresourceversion)
  * [`fn withSelfLink(selfLink)`](#fn-metadatawithselflink)
  * [`fn withUid(uid)`](#fn-metadatawithuid)
* [`obj spec`](#obj-spec)
  * [`fn withDeletionPolicy(deletionPolicy)`](#fn-specwithdeletionpolicy)
  * [`fn withManagementPolicies(managementPolicies)`](#fn-specwithmanagementpolicies)
  * [`fn withManagementPoliciesMixin(managementPolicies)`](#fn-specwithmanagementpoliciesmixin)
  * [`obj spec.forProvider`](#obj-specforprovider)
    * [`fn withDashboardUid(dashboardUid)`](#fn-specforproviderwithdashboarduid)
    * [`fn withDashboards(dashboards)`](#fn-specforproviderwithdashboards)
    * [`fn withDashboardsMixin(dashboards)`](#fn-specforproviderwithdashboardsmixin)
    * [`fn withFormats(formats)`](#fn-specforproviderwithformats)
    * [`fn withFormatsMixin(formats)`](#fn-specforproviderwithformatsmixin)
    * [`fn withIncludeDashboardLink(includeDashboardLink)`](#fn-specforproviderwithincludedashboardlink)
    * [`fn withIncludeTableCsv(includeTableCsv)`](#fn-specforproviderwithincludetablecsv)
    * [`fn withLayout(layout)`](#fn-specforproviderwithlayout)
    * [`fn withMessage(message)`](#fn-specforproviderwithmessage)
    * [`fn withName(name)`](#fn-specforproviderwithname)
    * [`fn withOrgId(orgId)`](#fn-specforproviderwithorgid)
    * [`fn withOrientation(orientation)`](#fn-specforproviderwithorientation)
    * [`fn withRecipients(recipients)`](#fn-specforproviderwithrecipients)
    * [`fn withRecipientsMixin(recipients)`](#fn-specforproviderwithrecipientsmixin)
    * [`fn withReplyTo(replyTo)`](#fn-specforproviderwithreplyto)
    * [`fn withSchedule(schedule)`](#fn-specforproviderwithschedule)
    * [`fn withScheduleMixin(schedule)`](#fn-specforproviderwithschedulemixin)
    * [`fn withTimeRange(timeRange)`](#fn-specforproviderwithtimerange)
    * [`fn withTimeRangeMixin(timeRange)`](#fn-specforproviderwithtimerangemixin)
    * [`obj spec.forProvider.dashboardRef`](#obj-specforproviderdashboardref)
      * [`fn withName(name)`](#fn-specforproviderdashboardrefwithname)
      * [`obj spec.forProvider.dashboardRef.policy`](#obj-specforproviderdashboardrefpolicy)
        * [`fn withResolution(resolution)`](#fn-specforproviderdashboardrefpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specforproviderdashboardrefpolicywithresolve)
    * [`obj spec.forProvider.dashboardSelector`](#obj-specforproviderdashboardselector)
      * [`fn withMatchControllerRef(matchControllerRef)`](#fn-specforproviderdashboardselectorwithmatchcontrollerref)
      * [`fn withMatchLabels(matchLabels)`](#fn-specforproviderdashboardselectorwithmatchlabels)
      * [`fn withMatchLabelsMixin(matchLabels)`](#fn-specforproviderdashboardselectorwithmatchlabelsmixin)
      * [`obj spec.forProvider.dashboardSelector.policy`](#obj-specforproviderdashboardselectorpolicy)
        * [`fn withResolution(resolution)`](#fn-specforproviderdashboardselectorpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specforproviderdashboardselectorpolicywithresolve)
    * [`obj spec.forProvider.dashboards`](#obj-specforproviderdashboards)
      * [`fn withReportVariables(reportVariables)`](#fn-specforproviderdashboardswithreportvariables)
      * [`fn withReportVariablesMixin(reportVariables)`](#fn-specforproviderdashboardswithreportvariablesmixin)
      * [`fn withTimeRange(timeRange)`](#fn-specforproviderdashboardswithtimerange)
      * [`fn withTimeRangeMixin(timeRange)`](#fn-specforproviderdashboardswithtimerangemixin)
      * [`fn withUid(uid)`](#fn-specforproviderdashboardswithuid)
      * [`obj spec.forProvider.dashboards.timeRange`](#obj-specforproviderdashboardstimerange)
        * [`fn withFrom(from)`](#fn-specforproviderdashboardstimerangewithfrom)
        * [`fn withTo(to)`](#fn-specforproviderdashboardstimerangewithto)
    * [`obj spec.forProvider.organizationRef`](#obj-specforproviderorganizationref)
      * [`fn withName(name)`](#fn-specforproviderorganizationrefwithname)
      * [`obj spec.forProvider.organizationRef.policy`](#obj-specforproviderorganizationrefpolicy)
        * [`fn withResolution(resolution)`](#fn-specforproviderorganizationrefpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specforproviderorganizationrefpolicywithresolve)
    * [`obj spec.forProvider.organizationSelector`](#obj-specforproviderorganizationselector)
      * [`fn withMatchControllerRef(matchControllerRef)`](#fn-specforproviderorganizationselectorwithmatchcontrollerref)
      * [`fn withMatchLabels(matchLabels)`](#fn-specforproviderorganizationselectorwithmatchlabels)
      * [`fn withMatchLabelsMixin(matchLabels)`](#fn-specforproviderorganizationselectorwithmatchlabelsmixin)
      * [`obj spec.forProvider.organizationSelector.policy`](#obj-specforproviderorganizationselectorpolicy)
        * [`fn withResolution(resolution)`](#fn-specforproviderorganizationselectorpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specforproviderorganizationselectorpolicywithresolve)
    * [`obj spec.forProvider.schedule`](#obj-specforproviderschedule)
      * [`fn withCustomInterval(customInterval)`](#fn-specforproviderschedulewithcustominterval)
      * [`fn withEndTime(endTime)`](#fn-specforproviderschedulewithendtime)
      * [`fn withFrequency(frequency)`](#fn-specforproviderschedulewithfrequency)
      * [`fn withLastDayOfMonth(lastDayOfMonth)`](#fn-specforproviderschedulewithlastdayofmonth)
      * [`fn withStartTime(startTime)`](#fn-specforproviderschedulewithstarttime)
      * [`fn withTimezone(timezone)`](#fn-specforproviderschedulewithtimezone)
      * [`fn withWorkdaysOnly(workdaysOnly)`](#fn-specforproviderschedulewithworkdaysonly)
    * [`obj spec.forProvider.timeRange`](#obj-specforprovidertimerange)
      * [`fn withFrom(from)`](#fn-specforprovidertimerangewithfrom)
      * [`fn withTo(to)`](#fn-specforprovidertimerangewithto)
  * [`obj spec.initProvider`](#obj-specinitprovider)
    * [`fn withDashboardUid(dashboardUid)`](#fn-specinitproviderwithdashboarduid)
    * [`fn withDashboards(dashboards)`](#fn-specinitproviderwithdashboards)
    * [`fn withDashboardsMixin(dashboards)`](#fn-specinitproviderwithdashboardsmixin)
    * [`fn withFormats(formats)`](#fn-specinitproviderwithformats)
    * [`fn withFormatsMixin(formats)`](#fn-specinitproviderwithformatsmixin)
    * [`fn withIncludeDashboardLink(includeDashboardLink)`](#fn-specinitproviderwithincludedashboardlink)
    * [`fn withIncludeTableCsv(includeTableCsv)`](#fn-specinitproviderwithincludetablecsv)
    * [`fn withLayout(layout)`](#fn-specinitproviderwithlayout)
    * [`fn withMessage(message)`](#fn-specinitproviderwithmessage)
    * [`fn withName(name)`](#fn-specinitproviderwithname)
    * [`fn withOrgId(orgId)`](#fn-specinitproviderwithorgid)
    * [`fn withOrientation(orientation)`](#fn-specinitproviderwithorientation)
    * [`fn withRecipients(recipients)`](#fn-specinitproviderwithrecipients)
    * [`fn withRecipientsMixin(recipients)`](#fn-specinitproviderwithrecipientsmixin)
    * [`fn withReplyTo(replyTo)`](#fn-specinitproviderwithreplyto)
    * [`fn withSchedule(schedule)`](#fn-specinitproviderwithschedule)
    * [`fn withScheduleMixin(schedule)`](#fn-specinitproviderwithschedulemixin)
    * [`fn withTimeRange(timeRange)`](#fn-specinitproviderwithtimerange)
    * [`fn withTimeRangeMixin(timeRange)`](#fn-specinitproviderwithtimerangemixin)
    * [`obj spec.initProvider.dashboardRef`](#obj-specinitproviderdashboardref)
      * [`fn withName(name)`](#fn-specinitproviderdashboardrefwithname)
      * [`obj spec.initProvider.dashboardRef.policy`](#obj-specinitproviderdashboardrefpolicy)
        * [`fn withResolution(resolution)`](#fn-specinitproviderdashboardrefpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specinitproviderdashboardrefpolicywithresolve)
    * [`obj spec.initProvider.dashboardSelector`](#obj-specinitproviderdashboardselector)
      * [`fn withMatchControllerRef(matchControllerRef)`](#fn-specinitproviderdashboardselectorwithmatchcontrollerref)
      * [`fn withMatchLabels(matchLabels)`](#fn-specinitproviderdashboardselectorwithmatchlabels)
      * [`fn withMatchLabelsMixin(matchLabels)`](#fn-specinitproviderdashboardselectorwithmatchlabelsmixin)
      * [`obj spec.initProvider.dashboardSelector.policy`](#obj-specinitproviderdashboardselectorpolicy)
        * [`fn withResolution(resolution)`](#fn-specinitproviderdashboardselectorpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specinitproviderdashboardselectorpolicywithresolve)
    * [`obj spec.initProvider.dashboards`](#obj-specinitproviderdashboards)
      * [`fn withReportVariables(reportVariables)`](#fn-specinitproviderdashboardswithreportvariables)
      * [`fn withReportVariablesMixin(reportVariables)`](#fn-specinitproviderdashboardswithreportvariablesmixin)
      * [`fn withTimeRange(timeRange)`](#fn-specinitproviderdashboardswithtimerange)
      * [`fn withTimeRangeMixin(timeRange)`](#fn-specinitproviderdashboardswithtimerangemixin)
      * [`fn withUid(uid)`](#fn-specinitproviderdashboardswithuid)
      * [`obj spec.initProvider.dashboards.timeRange`](#obj-specinitproviderdashboardstimerange)
        * [`fn withFrom(from)`](#fn-specinitproviderdashboardstimerangewithfrom)
        * [`fn withTo(to)`](#fn-specinitproviderdashboardstimerangewithto)
    * [`obj spec.initProvider.organizationRef`](#obj-specinitproviderorganizationref)
      * [`fn withName(name)`](#fn-specinitproviderorganizationrefwithname)
      * [`obj spec.initProvider.organizationRef.policy`](#obj-specinitproviderorganizationrefpolicy)
        * [`fn withResolution(resolution)`](#fn-specinitproviderorganizationrefpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specinitproviderorganizationrefpolicywithresolve)
    * [`obj spec.initProvider.organizationSelector`](#obj-specinitproviderorganizationselector)
      * [`fn withMatchControllerRef(matchControllerRef)`](#fn-specinitproviderorganizationselectorwithmatchcontrollerref)
      * [`fn withMatchLabels(matchLabels)`](#fn-specinitproviderorganizationselectorwithmatchlabels)
      * [`fn withMatchLabelsMixin(matchLabels)`](#fn-specinitproviderorganizationselectorwithmatchlabelsmixin)
      * [`obj spec.initProvider.organizationSelector.policy`](#obj-specinitproviderorganizationselectorpolicy)
        * [`fn withResolution(resolution)`](#fn-specinitproviderorganizationselectorpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specinitproviderorganizationselectorpolicywithresolve)
    * [`obj spec.initProvider.schedule`](#obj-specinitproviderschedule)
      * [`fn withCustomInterval(customInterval)`](#fn-specinitproviderschedulewithcustominterval)
      * [`fn withEndTime(endTime)`](#fn-specinitproviderschedulewithendtime)
      * [`fn withFrequency(frequency)`](#fn-specinitproviderschedulewithfrequency)
      * [`fn withLastDayOfMonth(lastDayOfMonth)`](#fn-specinitproviderschedulewithlastdayofmonth)
      * [`fn withStartTime(startTime)`](#fn-specinitproviderschedulewithstarttime)
      * [`fn withTimezone(timezone)`](#fn-specinitproviderschedulewithtimezone)
      * [`fn withWorkdaysOnly(workdaysOnly)`](#fn-specinitproviderschedulewithworkdaysonly)
    * [`obj spec.initProvider.timeRange`](#obj-specinitprovidertimerange)
      * [`fn withFrom(from)`](#fn-specinitprovidertimerangewithfrom)
      * [`fn withTo(to)`](#fn-specinitprovidertimerangewithto)
  * [`obj spec.providerConfigRef`](#obj-specproviderconfigref)
    * [`fn withName(name)`](#fn-specproviderconfigrefwithname)
    * [`obj spec.providerConfigRef.policy`](#obj-specproviderconfigrefpolicy)
      * [`fn withResolution(resolution)`](#fn-specproviderconfigrefpolicywithresolution)
      * [`fn withResolve(resolve)`](#fn-specproviderconfigrefpolicywithresolve)
  * [`obj spec.publishConnectionDetailsTo`](#obj-specpublishconnectiondetailsto)
    * [`fn withName(name)`](#fn-specpublishconnectiondetailstowithname)
    * [`obj spec.publishConnectionDetailsTo.configRef`](#obj-specpublishconnectiondetailstoconfigref)
      * [`fn withName(name)`](#fn-specpublishconnectiondetailstoconfigrefwithname)
      * [`obj spec.publishConnectionDetailsTo.configRef.policy`](#obj-specpublishconnectiondetailstoconfigrefpolicy)
        * [`fn withResolution(resolution)`](#fn-specpublishconnectiondetailstoconfigrefpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specpublishconnectiondetailstoconfigrefpolicywithresolve)
    * [`obj spec.publishConnectionDetailsTo.metadata`](#obj-specpublishconnectiondetailstometadata)
      * [`fn withAnnotations(annotations)`](#fn-specpublishconnectiondetailstometadatawithannotations)
      * [`fn withAnnotationsMixin(annotations)`](#fn-specpublishconnectiondetailstometadatawithannotationsmixin)
      * [`fn withLabels(labels)`](#fn-specpublishconnectiondetailstometadatawithlabels)
      * [`fn withLabelsMixin(labels)`](#fn-specpublishconnectiondetailstometadatawithlabelsmixin)
      * [`fn withType(type)`](#fn-specpublishconnectiondetailstometadatawithtype)
  * [`obj spec.writeConnectionSecretToRef`](#obj-specwriteconnectionsecrettoref)
    * [`fn withName(name)`](#fn-specwriteconnectionsecrettorefwithname)
    * [`fn withNamespace(namespace)`](#fn-specwriteconnectionsecrettorefwithnamespace)

## Fields

### fn new

```ts
new(name)
```

new returns an instance of Report

## obj metadata

"ObjectMeta is metadata that all persisted resources must have, which includes all objects users must create."

### fn metadata.withAnnotations

```ts
withAnnotations(annotations)
```

"Annotations is an unstructured key value map stored with a resource that may be set by external tools to store and retrieve arbitrary metadata. They are not queryable and should be preserved when modifying objects. More info: http://kubernetes.io/docs/user-guide/annotations"

### fn metadata.withAnnotationsMixin

```ts
withAnnotationsMixin(annotations)
```

"Annotations is an unstructured key value map stored with a resource that may be set by external tools to store and retrieve arbitrary metadata. They are not queryable and should be preserved when modifying objects. More info: http://kubernetes.io/docs/user-guide/annotations"

**Note:** This function appends passed data to existing values

### fn metadata.withClusterName

```ts
withClusterName(clusterName)
```

"The name of the cluster which the object belongs to. This is used to distinguish resources with same name and namespace in different clusters. This field is not set anywhere right now and apiserver is going to ignore it if set in create or update request."

### fn metadata.withCreationTimestamp

```ts
withCreationTimestamp(creationTimestamp)
```

"Time is a wrapper around time.Time which supports correct marshaling to YAML and JSON.  Wrappers are provided for many of the factory methods that the time package offers."

### fn metadata.withDeletionGracePeriodSeconds

```ts
withDeletionGracePeriodSeconds(deletionGracePeriodSeconds)
```

"Number of seconds allowed for this object to gracefully terminate before it will be removed from the system. Only set when deletionTimestamp is also set. May only be shortened. Read-only."

### fn metadata.withDeletionTimestamp

```ts
withDeletionTimestamp(deletionTimestamp)
```

"Time is a wrapper around time.Time which supports correct marshaling to YAML and JSON.  Wrappers are provided for many of the factory methods that the time package offers."

### fn metadata.withFinalizers

```ts
withFinalizers(finalizers)
```

"Must be empty before the object is deleted from the registry. Each entry is an identifier for the responsible component that will remove the entry from the list. If the deletionTimestamp of the object is non-nil, entries in this list can only be removed. Finalizers may be processed and removed in any order.  Order is NOT enforced because it introduces significant risk of stuck finalizers. finalizers is a shared field, any actor with permission can reorder it. If the finalizer list is processed in order, then this can lead to a situation in which the component responsible for the first finalizer in the list is waiting for a signal (field value, external system, or other) produced by a component responsible for a finalizer later in the list, resulting in a deadlock. Without enforced ordering finalizers are free to order amongst themselves and are not vulnerable to ordering changes in the list."

### fn metadata.withFinalizersMixin

```ts
withFinalizersMixin(finalizers)
```

"Must be empty before the object is deleted from the registry. Each entry is an identifier for the responsible component that will remove the entry from the list. If the deletionTimestamp of the object is non-nil, entries in this list can only be removed. Finalizers may be processed and removed in any order.  Order is NOT enforced because it introduces significant risk of stuck finalizers. finalizers is a shared field, any actor with permission can reorder it. If the finalizer list is processed in order, then this can lead to a situation in which the component responsible for the first finalizer in the list is waiting for a signal (field value, external system, or other) produced by a component responsible for a finalizer later in the list, resulting in a deadlock. Without enforced ordering finalizers are free to order amongst themselves and are not vulnerable to ordering changes in the list."

**Note:** This function appends passed data to existing values

### fn metadata.withGenerateName

```ts
withGenerateName(generateName)
```

"GenerateName is an optional prefix, used by the server, to generate a unique name ONLY IF the Name field has not been provided. If this field is used, the name returned to the client will be different than the name passed. This value will also be combined with a unique suffix. The provided value has the same validation rules as the Name field, and may be truncated by the length of the suffix required to make the value unique on the server.\n\nIf this field is specified and the generated name exists, the server will NOT return a 409 - instead, it will either return 201 Created or 500 with Reason ServerTimeout indicating a unique name could not be found in the time allotted, and the client should retry (optionally after the time indicated in the Retry-After header).\n\nApplied only if Name is not specified. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#idempotency"

### fn metadata.withGeneration

```ts
withGeneration(generation)
```

"A sequence number representing a specific generation of the desired state. Populated by the system. Read-only."

### fn metadata.withLabels

```ts
withLabels(labels)
```

"Map of string keys and values that can be used to organize and categorize (scope and select) objects. May match selectors of replication controllers and services. More info: http://kubernetes.io/docs/user-guide/labels"

### fn metadata.withLabelsMixin

```ts
withLabelsMixin(labels)
```

"Map of string keys and values that can be used to organize and categorize (scope and select) objects. May match selectors of replication controllers and services. More info: http://kubernetes.io/docs/user-guide/labels"

**Note:** This function appends passed data to existing values

### fn metadata.withName

```ts
withName(name)
```

"Name must be unique within a namespace. Is required when creating resources, although some resources may allow a client to request the generation of an appropriate name automatically. Name is primarily intended for creation idempotence and configuration definition. Cannot be updated. More info: http://kubernetes.io/docs/user-guide/identifiers#names"

### fn metadata.withNamespace

```ts
withNamespace(namespace)
```

"Namespace defines the space within which each name must be unique. An empty namespace is equivalent to the \"default\" namespace, but \"default\" is the canonical representation. Not all objects are required to be scoped to a namespace - the value of this field for those objects will be empty.\n\nMust be a DNS_LABEL. Cannot be updated. More info: http://kubernetes.io/docs/user-guide/namespaces"

### fn metadata.withOwnerReferences

```ts
withOwnerReferences(ownerReferences)
```

"List of objects depended by this object. If ALL objects in the list have been deleted, this object will be garbage collected. If this object is managed by a controller, then an entry in this list will point to this controller, with the controller field set to true. There cannot be more than one managing controller."

### fn metadata.withOwnerReferencesMixin

```ts
withOwnerReferencesMixin(ownerReferences)
```

"List of objects depended by this object. If ALL objects in the list have been deleted, this object will be garbage collected. If this object is managed by a controller, then an entry in this list will point to this controller, with the controller field set to true. There cannot be more than one managing controller."

**Note:** This function appends passed data to existing values

### fn metadata.withResourceVersion

```ts
withResourceVersion(resourceVersion)
```

"An opaque value that represents the internal version of this object that can be used by clients to determine when objects have changed. May be used for optimistic concurrency, change detection, and the watch operation on a resource or set of resources. Clients must treat these values as opaque and passed unmodified back to the server. They may only be valid for a particular resource or set of resources.\n\nPopulated by the system. Read-only. Value must be treated as opaque by clients and . More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#concurrency-control-and-consistency"

### fn metadata.withSelfLink

```ts
withSelfLink(selfLink)
```

"SelfLink is a URL representing this object. Populated by the system. Read-only.\n\nDEPRECATED Kubernetes will stop propagating this field in 1.20 release and the field is planned to be removed in 1.21 release."

### fn metadata.withUid

```ts
withUid(uid)
```

"UID is the unique in time and space value for this object. It is typically generated by the server on successful creation of a resource and is not allowed to change on PUT operations.\n\nPopulated by the system. Read-only. More info: http://kubernetes.io/docs/user-guide/identifiers#uids"

## obj spec

"ReportSpec defines the desired state of Report"

### fn spec.withDeletionPolicy

```ts
withDeletionPolicy(deletionPolicy)
```

"DeletionPolicy specifies what will happen to the underlying external\nwhen this managed resource is deleted - either \"Delete\" or \"Orphan\" the\nexternal resource.\nThis field is planned to be deprecated in favor of the ManagementPolicies\nfield in a future release. Currently, both could be set independently and\nnon-default values would be honored if the feature flag is enabled.\nSee the design doc for more information: https://github.com/crossplane/crossplane/blob/499895a25d1a1a0ba1604944ef98ac7a1a71f197/design/design-doc-observe-only-resources.md?plain=1#L223"

### fn spec.withManagementPolicies

```ts
withManagementPolicies(managementPolicies)
```

"THIS IS A BETA FIELD. It is on by default but can be opted out\nthrough a Crossplane feature flag.\nManagementPolicies specify the array of actions Crossplane is allowed to\ntake on the managed and external resources.\nThis field is planned to replace the DeletionPolicy field in a future\nrelease. Currently, both could be set independently and non-default\nvalues would be honored if the feature flag is enabled. If both are\ncustom, the DeletionPolicy field will be ignored.\nSee the design doc for more information: https://github.com/crossplane/crossplane/blob/499895a25d1a1a0ba1604944ef98ac7a1a71f197/design/design-doc-observe-only-resources.md?plain=1#L223\nand this one: https://github.com/crossplane/crossplane/blob/444267e84783136daa93568b364a5f01228cacbe/design/one-pager-ignore-changes.md"

### fn spec.withManagementPoliciesMixin

```ts
withManagementPoliciesMixin(managementPolicies)
```

"THIS IS A BETA FIELD. It is on by default but can be opted out\nthrough a Crossplane feature flag.\nManagementPolicies specify the array of actions Crossplane is allowed to\ntake on the managed and external resources.\nThis field is planned to replace the DeletionPolicy field in a future\nrelease. Currently, both could be set independently and non-default\nvalues would be honored if the feature flag is enabled. If both are\ncustom, the DeletionPolicy field will be ignored.\nSee the design doc for more information: https://github.com/crossplane/crossplane/blob/499895a25d1a1a0ba1604944ef98ac7a1a71f197/design/design-doc-observe-only-resources.md?plain=1#L223\nand this one: https://github.com/crossplane/crossplane/blob/444267e84783136daa93568b364a5f01228cacbe/design/one-pager-ignore-changes.md"

**Note:** This function appends passed data to existing values

## obj spec.forProvider



### fn spec.forProvider.withDashboardUid

```ts
withDashboardUid(dashboardUid)
```

"(String, Deprecated) Dashboard to be sent in the report.\nDashboard to be sent in the report."

### fn spec.forProvider.withDashboards

```ts
withDashboards(dashboards)
```

"(Block List) List of dashboards to render into the report (see below for nested schema)\nList of dashboards to render into the report"

### fn spec.forProvider.withDashboardsMixin

```ts
withDashboardsMixin(dashboards)
```

"(Block List) List of dashboards to render into the report (see below for nested schema)\nList of dashboards to render into the report"

**Note:** This function appends passed data to existing values

### fn spec.forProvider.withFormats

```ts
withFormats(formats)
```

"(Set of String) Specifies what kind of attachment to generate for the report. Allowed values: pdf, csv, image.\nSpecifies what kind of attachment to generate for the report. Allowed values: `pdf`, `csv`, `image`."

### fn spec.forProvider.withFormatsMixin

```ts
withFormatsMixin(formats)
```

"(Set of String) Specifies what kind of attachment to generate for the report. Allowed values: pdf, csv, image.\nSpecifies what kind of attachment to generate for the report. Allowed values: `pdf`, `csv`, `image`."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.withIncludeDashboardLink

```ts
withIncludeDashboardLink(includeDashboardLink)
```

"(Boolean) Whether to include a link to the dashboard in the report. Defaults to true.\nWhether to include a link to the dashboard in the report. Defaults to `true`."

### fn spec.forProvider.withIncludeTableCsv

```ts
withIncludeTableCsv(includeTableCsv)
```

"(Boolean) Whether to include a CSV file of table panel data. Defaults to false.\nWhether to include a CSV file of table panel data. Defaults to `false`."

### fn spec.forProvider.withLayout

```ts
withLayout(layout)
```

"(String) Layout of the report. Allowed values: simple, grid. Defaults to grid.\nLayout of the report. Allowed values: `simple`, `grid`. Defaults to `grid`."

### fn spec.forProvider.withMessage

```ts
withMessage(message)
```

"(String) Message to be sent in the report.\nMessage to be sent in the report."

### fn spec.forProvider.withName

```ts
withName(name)
```

"(String) Name of the report.\nName of the report."

### fn spec.forProvider.withOrgId

```ts
withOrgId(orgId)
```

"(String) The Organization ID. If not set, the Org ID defined in the provider block will be used.\nThe Organization ID. If not set, the Org ID defined in the provider block will be used."

### fn spec.forProvider.withOrientation

```ts
withOrientation(orientation)
```

"(String) Orientation of the report. Allowed values: landscape, portrait. Defaults to landscape.\nOrientation of the report. Allowed values: `landscape`, `portrait`. Defaults to `landscape`."

### fn spec.forProvider.withRecipients

```ts
withRecipients(recipients)
```

"(List of String) List of recipients of the report.\nList of recipients of the report."

### fn spec.forProvider.withRecipientsMixin

```ts
withRecipientsMixin(recipients)
```

"(List of String) List of recipients of the report.\nList of recipients of the report."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.withReplyTo

```ts
withReplyTo(replyTo)
```

"to email address of the report.\nReply-to email address of the report."

### fn spec.forProvider.withSchedule

```ts
withSchedule(schedule)
```

"(Block List, Min: 1, Max: 1) Schedule of the report. (see below for nested schema)\nSchedule of the report."

### fn spec.forProvider.withScheduleMixin

```ts
withScheduleMixin(schedule)
```

"(Block List, Min: 1, Max: 1) Schedule of the report. (see below for nested schema)\nSchedule of the report."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.withTimeRange

```ts
withTimeRange(timeRange)
```

"(Block List, Max: 1, Deprecated) Time range of the report. (see below for nested schema)\nTime range of the report."

### fn spec.forProvider.withTimeRangeMixin

```ts
withTimeRangeMixin(timeRange)
```

"(Block List, Max: 1, Deprecated) Time range of the report. (see below for nested schema)\nTime range of the report."

**Note:** This function appends passed data to existing values

## obj spec.forProvider.dashboardRef

"Reference to a Dashboard in oss to populate dashboardUid."

### fn spec.forProvider.dashboardRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.forProvider.dashboardRef.policy

"Policies for referencing."

### fn spec.forProvider.dashboardRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.forProvider.dashboardRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.forProvider.dashboardSelector

"Selector for a Dashboard in oss to populate dashboardUid."

### fn spec.forProvider.dashboardSelector.withMatchControllerRef

```ts
withMatchControllerRef(matchControllerRef)
```

"MatchControllerRef ensures an object with the same controller reference\nas the selecting object is selected."

### fn spec.forProvider.dashboardSelector.withMatchLabels

```ts
withMatchLabels(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

### fn spec.forProvider.dashboardSelector.withMatchLabelsMixin

```ts
withMatchLabelsMixin(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

**Note:** This function appends passed data to existing values

## obj spec.forProvider.dashboardSelector.policy

"Policies for selection."

### fn spec.forProvider.dashboardSelector.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.forProvider.dashboardSelector.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.forProvider.dashboards

"(Block List) List of dashboards to render into the report (see below for nested schema)\nList of dashboards to render into the report"

### fn spec.forProvider.dashboards.withReportVariables

```ts
withReportVariables(reportVariables)
```

"(Map of String) Add report variables to the dashboard. Values should be separated by commas.\nAdd report variables to the dashboard. Values should be separated by commas."

### fn spec.forProvider.dashboards.withReportVariablesMixin

```ts
withReportVariablesMixin(reportVariables)
```

"(Map of String) Add report variables to the dashboard. Values should be separated by commas.\nAdd report variables to the dashboard. Values should be separated by commas."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.dashboards.withTimeRange

```ts
withTimeRange(timeRange)
```

"(Block List, Max: 1, Deprecated) Time range of the report. (see below for nested schema)\nTime range of the report."

### fn spec.forProvider.dashboards.withTimeRangeMixin

```ts
withTimeRangeMixin(timeRange)
```

"(Block List, Max: 1, Deprecated) Time range of the report. (see below for nested schema)\nTime range of the report."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.dashboards.withUid

```ts
withUid(uid)
```

"(String) Dashboard uid.\nDashboard uid."

## obj spec.forProvider.dashboards.timeRange

"(Block List, Max: 1, Deprecated) Time range of the report. (see below for nested schema)\nTime range of the report."

### fn spec.forProvider.dashboards.timeRange.withFrom

```ts
withFrom(from)
```

"(String) Start of the time range.\nStart of the time range."

### fn spec.forProvider.dashboards.timeRange.withTo

```ts
withTo(to)
```

"(String) End of the time range.\nEnd of the time range."

## obj spec.forProvider.organizationRef

"Reference to a Organization in oss to populate orgId."

### fn spec.forProvider.organizationRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.forProvider.organizationRef.policy

"Policies for referencing."

### fn spec.forProvider.organizationRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.forProvider.organizationRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.forProvider.organizationSelector

"Selector for a Organization in oss to populate orgId."

### fn spec.forProvider.organizationSelector.withMatchControllerRef

```ts
withMatchControllerRef(matchControllerRef)
```

"MatchControllerRef ensures an object with the same controller reference\nas the selecting object is selected."

### fn spec.forProvider.organizationSelector.withMatchLabels

```ts
withMatchLabels(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

### fn spec.forProvider.organizationSelector.withMatchLabelsMixin

```ts
withMatchLabelsMixin(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

**Note:** This function appends passed data to existing values

## obj spec.forProvider.organizationSelector.policy

"Policies for selection."

### fn spec.forProvider.organizationSelector.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.forProvider.organizationSelector.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.forProvider.schedule

"(Block List, Min: 1, Max: 1) Schedule of the report. (see below for nested schema)\nSchedule of the report."

### fn spec.forProvider.schedule.withCustomInterval

```ts
withCustomInterval(customInterval)
```

"(String) Custom interval of the report.\nNote: This field is only available when frequency is set to custom.\nCustom interval of the report.\n**Note:** This field is only available when frequency is set to `custom`."

### fn spec.forProvider.schedule.withEndTime

```ts
withEndTime(endTime)
```

"01-02T15:04:05 format if you want to set a custom timezone\nEnd time of the report. If empty, the report will be sent indefinitely (according to frequency). Note that times will be saved as UTC in Grafana. Use 2006-01-02T15:04:05 format if you want to set a custom timezone"

### fn spec.forProvider.schedule.withFrequency

```ts
withFrequency(frequency)
```

"(String) Frequency of the report. Allowed values: never, once, hourly, daily, weekly, monthly, custom.\nFrequency of the report. Allowed values: `never`, `once`, `hourly`, `daily`, `weekly`, `monthly`, `custom`."

### fn spec.forProvider.schedule.withLastDayOfMonth

```ts
withLastDayOfMonth(lastDayOfMonth)
```

"(Boolean) Send the report on the last day of the month Defaults to false.\nSend the report on the last day of the month Defaults to `false`."

### fn spec.forProvider.schedule.withStartTime

```ts
withStartTime(startTime)
```

"01-02T15:04:05 format if you want to set a custom timezone\nStart time of the report. If empty, the start date will be set to the creation time. Note that times will be saved as UTC in Grafana. Use 2006-01-02T15:04:05 format if you want to set a custom timezone"

### fn spec.forProvider.schedule.withTimezone

```ts
withTimezone(timezone)
```

"(String) Set the report time zone. Defaults to GMT.\nSet the report time zone. Defaults to `GMT`."

### fn spec.forProvider.schedule.withWorkdaysOnly

```ts
withWorkdaysOnly(workdaysOnly)
```

"(Boolean) Whether to send the report only on work days. Defaults to false.\nWhether to send the report only on work days. Defaults to `false`."

## obj spec.forProvider.timeRange

"(Block List, Max: 1, Deprecated) Time range of the report. (see below for nested schema)\nTime range of the report."

### fn spec.forProvider.timeRange.withFrom

```ts
withFrom(from)
```

"(String) Start of the time range.\nStart of the time range."

### fn spec.forProvider.timeRange.withTo

```ts
withTo(to)
```

"(String) End of the time range.\nEnd of the time range."

## obj spec.initProvider

"THIS IS A BETA FIELD. It will be honored\nunless the Management Policies feature flag is disabled.\nInitProvider holds the same fields as ForProvider, with the exception\nof Identifier and other resource reference fields. The fields that are\nin InitProvider are merged into ForProvider when the resource is created.\nThe same fields are also added to the terraform ignore_changes hook, to\navoid updating them after creation. This is useful for fields that are\nrequired on creation, but we do not desire to update them after creation,\nfor example because of an external controller is managing them, like an\nautoscaler."

### fn spec.initProvider.withDashboardUid

```ts
withDashboardUid(dashboardUid)
```

"(String, Deprecated) Dashboard to be sent in the report.\nDashboard to be sent in the report."

### fn spec.initProvider.withDashboards

```ts
withDashboards(dashboards)
```

"(Block List) List of dashboards to render into the report (see below for nested schema)\nList of dashboards to render into the report"

### fn spec.initProvider.withDashboardsMixin

```ts
withDashboardsMixin(dashboards)
```

"(Block List) List of dashboards to render into the report (see below for nested schema)\nList of dashboards to render into the report"

**Note:** This function appends passed data to existing values

### fn spec.initProvider.withFormats

```ts
withFormats(formats)
```

"(Set of String) Specifies what kind of attachment to generate for the report. Allowed values: pdf, csv, image.\nSpecifies what kind of attachment to generate for the report. Allowed values: `pdf`, `csv`, `image`."

### fn spec.initProvider.withFormatsMixin

```ts
withFormatsMixin(formats)
```

"(Set of String) Specifies what kind of attachment to generate for the report. Allowed values: pdf, csv, image.\nSpecifies what kind of attachment to generate for the report. Allowed values: `pdf`, `csv`, `image`."

**Note:** This function appends passed data to existing values

### fn spec.initProvider.withIncludeDashboardLink

```ts
withIncludeDashboardLink(includeDashboardLink)
```

"(Boolean) Whether to include a link to the dashboard in the report. Defaults to true.\nWhether to include a link to the dashboard in the report. Defaults to `true`."

### fn spec.initProvider.withIncludeTableCsv

```ts
withIncludeTableCsv(includeTableCsv)
```

"(Boolean) Whether to include a CSV file of table panel data. Defaults to false.\nWhether to include a CSV file of table panel data. Defaults to `false`."

### fn spec.initProvider.withLayout

```ts
withLayout(layout)
```

"(String) Layout of the report. Allowed values: simple, grid. Defaults to grid.\nLayout of the report. Allowed values: `simple`, `grid`. Defaults to `grid`."

### fn spec.initProvider.withMessage

```ts
withMessage(message)
```

"(String) Message to be sent in the report.\nMessage to be sent in the report."

### fn spec.initProvider.withName

```ts
withName(name)
```

"(String) Name of the report.\nName of the report."

### fn spec.initProvider.withOrgId

```ts
withOrgId(orgId)
```

"(String) The Organization ID. If not set, the Org ID defined in the provider block will be used.\nThe Organization ID. If not set, the Org ID defined in the provider block will be used."

### fn spec.initProvider.withOrientation

```ts
withOrientation(orientation)
```

"(String) Orientation of the report. Allowed values: landscape, portrait. Defaults to landscape.\nOrientation of the report. Allowed values: `landscape`, `portrait`. Defaults to `landscape`."

### fn spec.initProvider.withRecipients

```ts
withRecipients(recipients)
```

"(List of String) List of recipients of the report.\nList of recipients of the report."

### fn spec.initProvider.withRecipientsMixin

```ts
withRecipientsMixin(recipients)
```

"(List of String) List of recipients of the report.\nList of recipients of the report."

**Note:** This function appends passed data to existing values

### fn spec.initProvider.withReplyTo

```ts
withReplyTo(replyTo)
```

"to email address of the report.\nReply-to email address of the report."

### fn spec.initProvider.withSchedule

```ts
withSchedule(schedule)
```

"(Block List, Min: 1, Max: 1) Schedule of the report. (see below for nested schema)\nSchedule of the report."

### fn spec.initProvider.withScheduleMixin

```ts
withScheduleMixin(schedule)
```

"(Block List, Min: 1, Max: 1) Schedule of the report. (see below for nested schema)\nSchedule of the report."

**Note:** This function appends passed data to existing values

### fn spec.initProvider.withTimeRange

```ts
withTimeRange(timeRange)
```

"(Block List, Max: 1, Deprecated) Time range of the report. (see below for nested schema)\nTime range of the report."

### fn spec.initProvider.withTimeRangeMixin

```ts
withTimeRangeMixin(timeRange)
```

"(Block List, Max: 1, Deprecated) Time range of the report. (see below for nested schema)\nTime range of the report."

**Note:** This function appends passed data to existing values

## obj spec.initProvider.dashboardRef

"Reference to a Dashboard in oss to populate dashboardUid."

### fn spec.initProvider.dashboardRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.initProvider.dashboardRef.policy

"Policies for referencing."

### fn spec.initProvider.dashboardRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.initProvider.dashboardRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.initProvider.dashboardSelector

"Selector for a Dashboard in oss to populate dashboardUid."

### fn spec.initProvider.dashboardSelector.withMatchControllerRef

```ts
withMatchControllerRef(matchControllerRef)
```

"MatchControllerRef ensures an object with the same controller reference\nas the selecting object is selected."

### fn spec.initProvider.dashboardSelector.withMatchLabels

```ts
withMatchLabels(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

### fn spec.initProvider.dashboardSelector.withMatchLabelsMixin

```ts
withMatchLabelsMixin(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

**Note:** This function appends passed data to existing values

## obj spec.initProvider.dashboardSelector.policy

"Policies for selection."

### fn spec.initProvider.dashboardSelector.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.initProvider.dashboardSelector.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.initProvider.dashboards

"(Block List) List of dashboards to render into the report (see below for nested schema)\nList of dashboards to render into the report"

### fn spec.initProvider.dashboards.withReportVariables

```ts
withReportVariables(reportVariables)
```

"(Map of String) Add report variables to the dashboard. Values should be separated by commas.\nAdd report variables to the dashboard. Values should be separated by commas."

### fn spec.initProvider.dashboards.withReportVariablesMixin

```ts
withReportVariablesMixin(reportVariables)
```

"(Map of String) Add report variables to the dashboard. Values should be separated by commas.\nAdd report variables to the dashboard. Values should be separated by commas."

**Note:** This function appends passed data to existing values

### fn spec.initProvider.dashboards.withTimeRange

```ts
withTimeRange(timeRange)
```

"(Block List, Max: 1, Deprecated) Time range of the report. (see below for nested schema)\nTime range of the report."

### fn spec.initProvider.dashboards.withTimeRangeMixin

```ts
withTimeRangeMixin(timeRange)
```

"(Block List, Max: 1, Deprecated) Time range of the report. (see below for nested schema)\nTime range of the report."

**Note:** This function appends passed data to existing values

### fn spec.initProvider.dashboards.withUid

```ts
withUid(uid)
```

"(String) Dashboard uid.\nDashboard uid."

## obj spec.initProvider.dashboards.timeRange

"(Block List, Max: 1, Deprecated) Time range of the report. (see below for nested schema)\nTime range of the report."

### fn spec.initProvider.dashboards.timeRange.withFrom

```ts
withFrom(from)
```

"(String) Start of the time range.\nStart of the time range."

### fn spec.initProvider.dashboards.timeRange.withTo

```ts
withTo(to)
```

"(String) End of the time range.\nEnd of the time range."

## obj spec.initProvider.organizationRef

"Reference to a Organization in oss to populate orgId."

### fn spec.initProvider.organizationRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.initProvider.organizationRef.policy

"Policies for referencing."

### fn spec.initProvider.organizationRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.initProvider.organizationRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.initProvider.organizationSelector

"Selector for a Organization in oss to populate orgId."

### fn spec.initProvider.organizationSelector.withMatchControllerRef

```ts
withMatchControllerRef(matchControllerRef)
```

"MatchControllerRef ensures an object with the same controller reference\nas the selecting object is selected."

### fn spec.initProvider.organizationSelector.withMatchLabels

```ts
withMatchLabels(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

### fn spec.initProvider.organizationSelector.withMatchLabelsMixin

```ts
withMatchLabelsMixin(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

**Note:** This function appends passed data to existing values

## obj spec.initProvider.organizationSelector.policy

"Policies for selection."

### fn spec.initProvider.organizationSelector.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.initProvider.organizationSelector.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.initProvider.schedule

"(Block List, Min: 1, Max: 1) Schedule of the report. (see below for nested schema)\nSchedule of the report."

### fn spec.initProvider.schedule.withCustomInterval

```ts
withCustomInterval(customInterval)
```

"(String) Custom interval of the report.\nNote: This field is only available when frequency is set to custom.\nCustom interval of the report.\n**Note:** This field is only available when frequency is set to `custom`."

### fn spec.initProvider.schedule.withEndTime

```ts
withEndTime(endTime)
```

"01-02T15:04:05 format if you want to set a custom timezone\nEnd time of the report. If empty, the report will be sent indefinitely (according to frequency). Note that times will be saved as UTC in Grafana. Use 2006-01-02T15:04:05 format if you want to set a custom timezone"

### fn spec.initProvider.schedule.withFrequency

```ts
withFrequency(frequency)
```

"(String) Frequency of the report. Allowed values: never, once, hourly, daily, weekly, monthly, custom.\nFrequency of the report. Allowed values: `never`, `once`, `hourly`, `daily`, `weekly`, `monthly`, `custom`."

### fn spec.initProvider.schedule.withLastDayOfMonth

```ts
withLastDayOfMonth(lastDayOfMonth)
```

"(Boolean) Send the report on the last day of the month Defaults to false.\nSend the report on the last day of the month Defaults to `false`."

### fn spec.initProvider.schedule.withStartTime

```ts
withStartTime(startTime)
```

"01-02T15:04:05 format if you want to set a custom timezone\nStart time of the report. If empty, the start date will be set to the creation time. Note that times will be saved as UTC in Grafana. Use 2006-01-02T15:04:05 format if you want to set a custom timezone"

### fn spec.initProvider.schedule.withTimezone

```ts
withTimezone(timezone)
```

"(String) Set the report time zone. Defaults to GMT.\nSet the report time zone. Defaults to `GMT`."

### fn spec.initProvider.schedule.withWorkdaysOnly

```ts
withWorkdaysOnly(workdaysOnly)
```

"(Boolean) Whether to send the report only on work days. Defaults to false.\nWhether to send the report only on work days. Defaults to `false`."

## obj spec.initProvider.timeRange

"(Block List, Max: 1, Deprecated) Time range of the report. (see below for nested schema)\nTime range of the report."

### fn spec.initProvider.timeRange.withFrom

```ts
withFrom(from)
```

"(String) Start of the time range.\nStart of the time range."

### fn spec.initProvider.timeRange.withTo

```ts
withTo(to)
```

"(String) End of the time range.\nEnd of the time range."

## obj spec.providerConfigRef

"ProviderConfigReference specifies how the provider that will be used to\ncreate, observe, update, and delete this managed resource should be\nconfigured."

### fn spec.providerConfigRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.providerConfigRef.policy

"Policies for referencing."

### fn spec.providerConfigRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.providerConfigRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.publishConnectionDetailsTo

"PublishConnectionDetailsTo specifies the connection secret config which\ncontains a name, metadata and a reference to secret store config to\nwhich any connection details for this managed resource should be written.\nConnection details frequently include the endpoint, username,\nand password required to connect to the managed resource."

### fn spec.publishConnectionDetailsTo.withName

```ts
withName(name)
```

"Name is the name of the connection secret."

## obj spec.publishConnectionDetailsTo.configRef

"SecretStoreConfigRef specifies which secret store config should be used\nfor this ConnectionSecret."

### fn spec.publishConnectionDetailsTo.configRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.publishConnectionDetailsTo.configRef.policy

"Policies for referencing."

### fn spec.publishConnectionDetailsTo.configRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.publishConnectionDetailsTo.configRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.publishConnectionDetailsTo.metadata

"Metadata is the metadata for connection secret."

### fn spec.publishConnectionDetailsTo.metadata.withAnnotations

```ts
withAnnotations(annotations)
```

"Annotations are the annotations to be added to connection secret.\n- For Kubernetes secrets, this will be used as \"metadata.annotations\".\n- It is up to Secret Store implementation for others store types."

### fn spec.publishConnectionDetailsTo.metadata.withAnnotationsMixin

```ts
withAnnotationsMixin(annotations)
```

"Annotations are the annotations to be added to connection secret.\n- For Kubernetes secrets, this will be used as \"metadata.annotations\".\n- It is up to Secret Store implementation for others store types."

**Note:** This function appends passed data to existing values

### fn spec.publishConnectionDetailsTo.metadata.withLabels

```ts
withLabels(labels)
```

"Labels are the labels/tags to be added to connection secret.\n- For Kubernetes secrets, this will be used as \"metadata.labels\".\n- It is up to Secret Store implementation for others store types."

### fn spec.publishConnectionDetailsTo.metadata.withLabelsMixin

```ts
withLabelsMixin(labels)
```

"Labels are the labels/tags to be added to connection secret.\n- For Kubernetes secrets, this will be used as \"metadata.labels\".\n- It is up to Secret Store implementation for others store types."

**Note:** This function appends passed data to existing values

### fn spec.publishConnectionDetailsTo.metadata.withType

```ts
withType(type)
```

"Type is the SecretType for the connection secret.\n- Only valid for Kubernetes Secret Stores."

## obj spec.writeConnectionSecretToRef

"WriteConnectionSecretToReference specifies the namespace and name of a\nSecret to which any connection details for this managed resource should\nbe written. Connection details frequently include the endpoint, username,\nand password required to connect to the managed resource.\nThis field is planned to be replaced in a future release in favor of\nPublishConnectionDetailsTo. Currently, both could be set independently\nand connection details would be published to both without affecting\neach other."

### fn spec.writeConnectionSecretToRef.withName

```ts
withName(name)
```

"Name of the secret."

### fn spec.writeConnectionSecretToRef.withNamespace

```ts
withNamespace(namespace)
```

"Namespace of the secret."